# Cleanframe

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  sync-wiki.yml
cleanframe/: __init__.py  _util.py  api.py  cli.py  codegen.py  dataio.py  diff.py  drift.py  errors.py  executor.py  fingerprint.py  issues.py  llm.py  ops.py  planner.py  profile.py  py.typed  quality.py  readfix.py  recipe.py  report.py  result.py  schema.py  streaming.py  types.py  validate.py  workbook.py
cleanframe/detectors/: __init__.py  base.py  categories.py  contacts.py  currency.py  dates.py  dedup.py  nulls.py  outliers.py  schema_mapping.py  text.py  units.py
docs/: README.md  api-reference.md  cli.md  concepts.md  detectors-and-ops.md  faq.md  getting-started.md  installation.md  recipe-spec.md  schema-spec.md
examples/: customer.recipe.yaml  customer.schema.yaml  messy_customers.csv
tests/: conftest.py  test_api_report_cli.py  test_audit_hardening.py  test_cross_platform.py  test_drift_codegen.py  test_executor_diff.py  test_llm_schema.py  test_ops.py  test_planner.py  test_production_safety.py  test_profile_detectors.py  test_recipe.py  test_validate.py  test_wave1_codegen.py  test_wave1_correctness.py  test_wave1_hardening.py  test_wave1_lineage.py  test_wave1_llm.py  test_wave2_scaling.py  test_wave2_vectorization.py  test_wave3_selection.py  test_wave3_workbook.py  test_wave4_readfix.py  test_wave5_streaming.py
wiki/: API-Reference.md  Architecture.md  CLI.md  Concepts.md  Detectors-and-Ops.md  FAQ.md  Getting-Started.md  Home.md  LLM-Planning.md  Production-Guide.md  README.md  Recipe-Specification.md  Schema-Specification.md
